--- a/output-2.html
+++ b/output-2.html
@@ -6,11 +6,11 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <style type="text/css">
 <!--
-	p {margin: 0; padding: 0;}	.ft00{font-size:16px;font-family:WIWSXX+TeXGyreTermesX;color:#000000;}
-	.ft01{font-size:14px;font-family:ISGITX+LMRoman10;color:#000000;}
-	.ft02{font-size:16px;font-family:ISGITX+LMRoman10;color:#000000;}
-	.ft03{font-size:16px;font-family:CPCRSF+LatinModernMath;color:#000000;}
-	.ft04{font-size:16px;line-height:16px;font-family:ISGITX+LMRoman10;color:#000000;}
+	p {margin: 0; padding: 0;}	.ft00{font-size:16px;font-family:JYTVWF+TeXGyreTermesX;color:#000000;}
+	.ft01{font-size:14px;font-family:UVOBPL+LMRoman10;color:#000000;}
+	.ft02{font-size:16px;font-family:UVOBPL+LMRoman10;color:#000000;}
+	.ft03{font-size:16px;font-family:YMEEWO+LatinModernMath;color:#000000;}
+	.ft04{font-size:16px;line-height:16px;font-family:UVOBPL+LMRoman10;color:#000000;}
 -->
 </style>
 </head>
