update skipkv arxiv

--- a/output-2.html
+++ b/output-2.html
@@ -6,12 +6,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <style type="text/css">
 <!--
-	p {margin: 0; padding: 0;}	.ft00{font-size:16px;font-family:EQLMJO+TeXGyreTermesX;color:#4471c4;}
-	.ft01{font-size:16px;font-family:EQLMJO+TeXGyreTermesX;color:#000000;}
-	.ft02{font-size:14px;font-family:YLFVLA+LMRoman10;color:#000000;}
-	.ft03{font-size:16px;font-family:YLFVLA+LMRoman10;color:#000000;}
-	.ft04{font-size:16px;font-family:TCZTZN+LatinModernMath;color:#000000;}
-	.ft05{font-size:16px;line-height:16px;font-family:YLFVLA+LMRoman10;color:#000000;}
+	p {margin: 0; padding: 0;}	.ft00{font-size:16px;font-family:AYLVYJ+TeXGyreTermesX;color:#4471c4;}
+	.ft01{font-size:16px;font-family:AYLVYJ+TeXGyreTermesX;color:#000000;}
+	.ft02{font-size:14px;font-family:WGOXIQ+LMRoman10;color:#000000;}
+	.ft03{font-size:16px;font-family:WGOXIQ+LMRoman10;color:#000000;}
+	.ft04{font-size:16px;font-family:UBPTZO+LatinModernMath;color:#000000;}
+	.ft05{font-size:16px;line-height:16px;font-family:WGOXIQ+LMRoman10;color:#000000;}
 -->
 </style>
 </head>
@@ -20,7 +20,7 @@
 <img width="918" height="1188" src="output002.png" alt="background image"/>
 <p style="position:absolute;top:45px;left:64px;white-space:nowrap" class="ft00"><b>RESEARCH&#160;PROJECTS</b></p>
 <p style="position:absolute;top:74px;left:64px;white-space:nowrap" class="ft01"><b>Structural&#160;Pruning&#160;for&#160;Eﬀicient&#160;LLM&#160;Inference&#160;via&#160;Low-rank&#160;Decomposition</b></p>
-<p style="position:absolute;top:75px;left:711px;white-space:nowrap" class="ft02">Aug.&#160;2024&#160;-&#160;May.&#160;2025</p>
+<p style="position:absolute;top:75px;left:721px;white-space:nowrap" class="ft02">Aug&#160;2024&#160;-&#160;May&#160;2025</p>
 <p style="position:absolute;top:94px;left:58px;white-space:nowrap" class="ft03">•&#160;Developed&#160;FLAT-LLM,&#160;a&#160;training-free,&#160;fine-grained&#160;compression&#160;method&#160;that&#160;leverages&#160;the&#160;low-rank&#160;structure&#160;of</p>
 <p style="position:absolute;top:109px;left:77px;white-space:nowrap" class="ft03">the&#160;activation&#160;space&#160;to&#160;transform&#160;and&#160;compress&#160;the&#160;model&#160;weights.</p>
 <p style="position:absolute;top:125px;left:58px;white-space:nowrap" class="ft03">•&#160;Introduced&#160;a&#160;novel&#160;training-free&#160;rank&#160;selection&#160;algorithm&#160;that&#160;allocates&#160;ranks&#160;using&#160;a&#160;greedy&#160;redistribution&#160;strategy</p>
@@ -28,13 +28,13 @@
 <p style="position:absolute;top:158px;left:58px;white-space:nowrap" class="ft03">•&#160;Achieved&#160;strong&#160;performance&#160;on&#160;LLaMA-2,&#160;3&#160;and&#160;Mistral&#160;models&#160;with&#160;minimal&#160;calibration&#160;overhead&#160;(within</p>
 <p style="position:absolute;top:175px;left:77px;white-space:nowrap" class="ft03">minutes),&#160;validated&#160;across&#160;language&#160;modeling&#160;and&#160;downstream&#160;tasks.</p>
 <p style="position:absolute;top:205px;left:64px;white-space:nowrap" class="ft01"><b>Training&#160;Accelerator&#160;Design&#160;for&#160;Tensor-Compressed&#160;Transformer&#160;Models</b></p>
-<p style="position:absolute;top:206px;left:715px;white-space:nowrap" class="ft02">Sep.&#160;2023&#160;-&#160;May.&#160;2024</p>
-<p style="position:absolute;top:225px;left:58px;white-space:nowrap" class="ft03">•&#160;Designed&#160;a&#160;tensor-compressed&#160;training&#160;framework&#160;for&#160;Transformer&#160;models,&#160;significantly&#160;reducing&#160;model&#160;size&#160;and</p>
-<p style="position:absolute;top:240px;left:77px;white-space:nowrap" class="ft03">memory&#160;footprint.</p>
-<p style="position:absolute;top:256px;left:58px;white-space:nowrap" class="ft03">•&#160;Developed&#160;a&#160;fixed&#160;bidirectional&#160;contraction&#160;path&#160;and&#160;an&#160;adaptive&#160;path-search&#160;algorithm&#160;to&#160;improve&#160;memory&#160;and</p>
-<p style="position:absolute;top:271px;left:77px;white-space:nowrap" class="ft03">compute&#160;eﬀiciency&#160;in&#160;long-sequence&#160;LLM&#160;training&#160;and&#160;inference.</p>
+<p style="position:absolute;top:206px;left:724px;white-space:nowrap" class="ft02">Sep&#160;2023&#160;-&#160;May&#160;2024</p>
+<p style="position:absolute;top:225px;left:58px;white-space:nowrap" class="ft03">•&#160;Designed&#160;a&#160;tensor-compressed&#160;training&#160;framework&#160;for&#160;Transformer&#160;deployment&#160;on&#160;edge,&#160;significantly&#160;reducing</p>
+<p style="position:absolute;top:240px;left:77px;white-space:nowrap" class="ft03">model&#160;size,&#160;memory&#160;footprint,&#160;and&#160;computational&#160;overhead&#160;via&#160;algorithm-hardware&#160;co-design.</p>
+<p style="position:absolute;top:256px;left:58px;white-space:nowrap" class="ft03">•&#160;Developed&#160;a&#160;fixed&#160;bidirectional&#160;contraction&#160;path&#160;and&#160;further&#160;extended&#160;it&#160;to&#160;an&#160;adaptive&#160;computing&#160;path&#160;search</p>
+<p style="position:absolute;top:271px;left:77px;white-space:nowrap" class="ft03">algorithm&#160;to&#160;improve&#160;memory&#160;and&#160;compute&#160;eﬀiciency&#160;in&#160;long-sequence&#160;LLM&#160;training&#160;and&#160;inference.</p>
 <p style="position:absolute;top:300px;left:64px;white-space:nowrap" class="ft01"><b>Binary-Quantized&#160;Ensemble&#160;LLM&#160;for&#160;Fast&#160;and&#160;Robust&#160;Language&#160;Model&#160;Inference</b></p>
-<p style="position:absolute;top:301px;left:709px;white-space:nowrap" class="ft02">Apr.&#160;2021&#160;-&#160;June.&#160;2023</p>
+<p style="position:absolute;top:301px;left:727px;white-space:nowrap" class="ft02">Apr&#160;2021&#160;-&#160;Jun&#160;2023</p>
 <p style="position:absolute;top:320px;left:58px;white-space:nowrap" class="ft05">•&#160;Developed&#160;BEBERT,&#160;a&#160;novel&#160;quantization-ensemble&#160;strategy&#160;enabling&#160;eﬀicient&#160;and&#160;accurate&#160;1-bit&#160;BERT&#160;inference.<br/>•&#160;Leveraged&#160;eﬀicient&#160;knowledge&#160;distillation&#160;strategy&#160;for&#160;high&#160;training&#160;eﬀiciency.<br/>•&#160;Achieved</p>
 <p style="position:absolute;top:353px;left:144px;white-space:nowrap" class="ft04">13×</p>
 <p style="position:absolute;top:353px;left:177px;white-space:nowrap" class="ft03">model&#160;size&#160;reduction&#160;and</p>
