--- a/output-1.html
+++ b/output-1.html
@@ -6,24 +6,24 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <style type="text/css">
 <!--
-	p {margin: 0; padding: 0;}	.ft00{font-size:15px;font-family:WGOXIQ+LMRoman10;color:#000000;}
-	.ft01{font-size:22px;font-family:AYLVYJ+TeXGyreTermesX;color:#000000;}
-	.ft02{font-size:12px;font-family:WWOSXT+LMRoman8;color:#000000;}
-	.ft03{font-size:15px;font-family:AYLVYJ+TeXGyreTermesX;color:#000000;}
-	.ft04{font-size:16px;font-family:AYLVYJ+TeXGyreTermesX;color:#4471c4;}
-	.ft05{font-size:16px;font-family:AYLVYJ+TeXGyreTermesX;color:#000000;}
-	.ft06{font-size:16px;font-family:ODNWGU+TeXGyreTermesX;color:#000000;}
-	.ft07{font-size:16px;font-family:MMJCXV+TeXGyreTermesX;color:#000000;}
-	.ft08{font-size:14px;font-family:ODNWGU+TeXGyreTermesX;color:#414141;}
-	.ft09{font-size:14px;font-family:WGOXIQ+LMRoman10;color:#000000;}
-	.ft010{font-size:16px;font-family:WGOXIQ+LMRoman10;color:#000000;}
-	.ft011{font-size:16px;font-family:UBPTZO+LatinModernMath;color:#000000;}
-	.ft012{font-size:15px;font-family:AYLVYJ+TeXGyreTermesX;color:#414141;}
-	.ft013{font-size:15px;font-family:ODNWGU+TeXGyreTermesX;color:#414141;}
-	.ft014{font-size:16px;line-height:16px;font-family:WGOXIQ+LMRoman10;color:#000000;}
-	.ft015{font-size:16px;line-height:17px;font-family:WGOXIQ+LMRoman10;color:#000000;}
-	.ft016{font-size:15px;line-height:17px;font-family:WGOXIQ+LMRoman10;color:#000000;}
-	.ft017{font-size:15px;line-height:17px;font-family:AYLVYJ+TeXGyreTermesX;color:#414141;}
+	p {margin: 0; padding: 0;}	.ft00{font-size:15px;font-family:AUMUVI+LMRoman10;color:#000000;}
+	.ft01{font-size:22px;font-family:EWNCDH+TeXGyreTermesX;color:#000000;}
+	.ft02{font-size:12px;font-family:UUAIJW+LMRoman8;color:#000000;}
+	.ft03{font-size:15px;font-family:EWNCDH+TeXGyreTermesX;color:#000000;}
+	.ft04{font-size:16px;font-family:EWNCDH+TeXGyreTermesX;color:#4471c4;}
+	.ft05{font-size:16px;font-family:EWNCDH+TeXGyreTermesX;color:#000000;}
+	.ft06{font-size:16px;font-family:XARLIB+TeXGyreTermesX;color:#000000;}
+	.ft07{font-size:16px;font-family:JWEOPI+TeXGyreTermesX;color:#000000;}
+	.ft08{font-size:14px;font-family:XARLIB+TeXGyreTermesX;color:#414141;}
+	.ft09{font-size:14px;font-family:AUMUVI+LMRoman10;color:#000000;}
+	.ft010{font-size:16px;font-family:AUMUVI+LMRoman10;color:#000000;}
+	.ft011{font-size:16px;font-family:CTZBEI+LatinModernMath;color:#000000;}
+	.ft012{font-size:15px;font-family:EWNCDH+TeXGyreTermesX;color:#414141;}
+	.ft013{font-size:15px;font-family:XARLIB+TeXGyreTermesX;color:#414141;}
+	.ft014{font-size:16px;line-height:16px;font-family:AUMUVI+LMRoman10;color:#000000;}
+	.ft015{font-size:16px;line-height:17px;font-family:AUMUVI+LMRoman10;color:#000000;}
+	.ft016{font-size:15px;line-height:17px;font-family:AUMUVI+LMRoman10;color:#000000;}
+	.ft017{font-size:15px;line-height:17px;font-family:EWNCDH+TeXGyreTermesX;color:#414141;}
 -->
 </style>
 </head>
@@ -42,7 +42,7 @@
 <p style="position:absolute;top:182px;left:350px;white-space:nowrap" class="ft07"><i>Ph.D.&#160;in&#160;Computer&#160;Engineering</i></p>
 <p style="position:absolute;top:183px;left:564px;white-space:nowrap" class="ft06">|&#160;CA,&#160;USA</p>
 <p style="position:absolute;top:182px;left:638px;white-space:nowrap" class="ft05"><b>3.9/4.0</b></p>
-<p style="position:absolute;top:184px;left:773px;white-space:nowrap" class="ft08">Fall&#160;2025&#160;-&#160;ongoing</p>
+<p style="position:absolute;top:184px;left:773px;white-space:nowrap" class="ft08">Fall&#160;2023&#160;-&#160;ongoing</p>
 <p style="position:absolute;top:200px;left:64px;white-space:nowrap" class="ft05"><b>University&#160;of&#160;California,&#160;Santa&#160;Barbara</b></p>
 <p style="position:absolute;top:201px;left:341px;white-space:nowrap" class="ft06">,</p>
 <p style="position:absolute;top:200px;left:350px;white-space:nowrap" class="ft07"><i>M.S.&#160;in&#160;Computer&#160;Engineering</i></p>
@@ -94,20 +94,20 @@
 <p style="position:absolute;top:720px;left:64px;white-space:nowrap" class="ft03"><b>ML&#160;&amp;&#160;NLP</b></p>
 <p style="position:absolute;top:702px;left:199px;white-space:nowrap" class="ft016">Eﬀicient&#160;Large&#160;Language&#160;Models&#160;(LLMs)&#160;Training/Inference,&#160;Eﬀicient&#160;Large&#160;Reasoning&#160;Models&#160;(LRMs)<br/>(Model&#160;Compression,&#160;KV&#160;Cache&#160;Compression,&#160;Pruning,&#160;Low-rank&#160;decomposition,&#160;Early&#160;Exit,&#160;Knowledge<br/>Distillation,&#160;Quantization)</p>
 <p style="position:absolute;top:770px;left:64px;white-space:nowrap" class="ft04"><b>SELECTED&#160;PUBLICATIONS&#160;&amp;&#160;PREPRINTS</b></p>
-<p style="position:absolute;top:797px;left:64px;white-space:nowrap" class="ft012"><b>Comprehensive&#160;Design&#160;Space&#160;Exploration&#160;for&#160;Tensorized&#160;Neural&#160;Network&#160;Hardware&#160;Accelerators</b></p>
-<p style="position:absolute;top:815px;left:64px;white-space:nowrap" class="ft013">Jinsong&#160;Zhang,&#160;Minghe&#160;Li,</p>
-<p style="position:absolute;top:815px;left:230px;white-space:nowrap" class="ft012"><b>Jiayi&#160;Tian</b></p>
-<p style="position:absolute;top:815px;left:293px;white-space:nowrap" class="ft013">,&#160;Jinming&#160;Lu,&#160;Zheng&#160;Zhang,&#160;under&#160;review&#160;at&#160;DAC,&#160;2026.&#160;<a href="https://www.arxiv.org/pdf/2511.17971">arXiv&#160;preprint</a>.</p>
-<p style="position:absolute;top:842px;left:64px;white-space:nowrap" class="ft017"><b>SkipKV:&#160;Selective&#160;Skipping&#160;of&#160;KV&#160;Generation&#160;and&#160;Storage&#160;for&#160;Eﬀicient&#160;Inference&#160;with&#160;Large&#160;Reasoning&#160;Models<br/>Jiayi&#160;Tian</b></p>
-<p style="position:absolute;top:860px;left:127px;white-space:nowrap" class="ft013">,&#160;Seyedarmin&#160;Azizi,&#160;Yequan&#160;Zhao,&#160;Erfan&#160;Baghaei&#160;Potraghloo,&#160;Sean&#160;McPherson,&#160;Sharath&#160;Nittur&#160;Sridhar,&#160;Zhengyang&#160;Wang,</p>
-<p style="position:absolute;top:878px;left:64px;white-space:nowrap" class="ft013">Zheng&#160;Zhang,&#160;Massoud&#160;Pedram,&#160;Souvik&#160;Kundu,&#160;under&#160;review&#160;at&#160;MLSYS,&#160;2026.&#160;<a href="https://arxiv.org/abs/2512.07993">arXiv&#160;preprint.</a></p>
-<p style="position:absolute;top:905px;left:64px;white-space:nowrap" class="ft017"><b>FLAT-LLM:&#160;Fine-grained&#160;Low-rank&#160;Activation&#160;Space&#160;Transformation&#160;for&#160;Large&#160;Language&#160;Model&#160;Compression<br/>Jiayi&#160;Tian</b></p>
-<p style="position:absolute;top:923px;left:127px;white-space:nowrap" class="ft013">,&#160;Ryan&#160;Solgi,&#160;Jinming&#160;Lu,&#160;Yifan&#160;Yang,&#160;Hai&#160;Li,&#160;Zheng&#160;Zhang,&#160;under&#160;review&#160;at&#160;ARR&#160;Oct,&#160;2025.&#160;<a href="https://arxiv.org/pdf/2505.23966">arXiv&#160;preprint.</a></p>
-<p style="position:absolute;top:950px;left:64px;white-space:nowrap" class="ft012"><b>FETTA:&#160;Flexible&#160;and&#160;Eﬀicient&#160;Hardware&#160;Accelerator&#160;for&#160;Tensorized&#160;Neural&#160;Network&#160;Training</b></p>
+<p style="position:absolute;top:797px;left:64px;white-space:nowrap" class="ft017"><b>SkipKV:&#160;Selective&#160;Skipping&#160;of&#160;KV&#160;Generation&#160;and&#160;Storage&#160;for&#160;Eﬀicient&#160;Inference&#160;with&#160;Large&#160;Reasoning&#160;Models<br/>Jiayi&#160;Tian</b></p>
+<p style="position:absolute;top:815px;left:127px;white-space:nowrap" class="ft013">,&#160;Seyedarmin&#160;Azizi,&#160;Yequan&#160;Zhao,&#160;Erfan&#160;Baghaei&#160;Potraghloo,&#160;Sean&#160;McPherson,&#160;Sharath&#160;Nittur&#160;Sridhar,&#160;Zhengyang&#160;Wang,</p>
+<p style="position:absolute;top:833px;left:64px;white-space:nowrap" class="ft013">Zheng&#160;Zhang,&#160;Massoud&#160;Pedram,&#160;Souvik&#160;Kundu,&#160;under&#160;review&#160;at&#160;MLSYS,&#160;2026.&#160;<a href="https://arxiv.org/abs/2512.07993">arXiv&#160;preprint.</a></p>
+<p style="position:absolute;top:860px;left:64px;white-space:nowrap" class="ft012"><b>Comprehensive&#160;Design&#160;Space&#160;Exploration&#160;for&#160;Tensorized&#160;Neural&#160;Network&#160;Hardware&#160;Accelerators</b></p>
+<p style="position:absolute;top:878px;left:64px;white-space:nowrap" class="ft013">Jinsong&#160;Zhang,&#160;Minghe&#160;Li,</p>
+<p style="position:absolute;top:878px;left:230px;white-space:nowrap" class="ft012"><b>Jiayi&#160;Tian</b></p>
+<p style="position:absolute;top:878px;left:293px;white-space:nowrap" class="ft013">,&#160;Jinming&#160;Lu,&#160;Zheng&#160;Zhang,&#160;under&#160;review&#160;at&#160;DAC,&#160;2026.&#160;<a href="https://www.arxiv.org/pdf/2511.17971">arXiv&#160;preprint</a>.</p>
+<p style="position:absolute;top:905px;left:64px;white-space:nowrap" class="ft017"><a href="https://arxiv.org/pdf/2505.23966"><b>FLAT-LLM:&#160;Fine-grained&#160;Low-rank&#160;Activation&#160;Space&#160;Transformation&#160;for&#160;Large&#160;Language&#160;Model&#160;Compression<br/></b></a><b>Jiayi&#160;Tian</b></p>
+<p style="position:absolute;top:923px;left:127px;white-space:nowrap" class="ft013">,&#160;Ryan&#160;Solgi,&#160;Jinming&#160;Lu,&#160;Yifan&#160;Yang,&#160;Hai&#160;Li,&#160;Zheng&#160;Zhang,&#160;accepted&#160;to&#160;Findings&#160;of&#160;EACL,&#160;2026.</p>
+<p style="position:absolute;top:950px;left:64px;white-space:nowrap" class="ft012"><a href="https://arxiv.org/pdf/2504.06474"><b>FETTA:&#160;Flexible&#160;and&#160;Eﬀicient&#160;Hardware&#160;Accelerator&#160;for&#160;Tensorized&#160;Neural&#160;Network&#160;Training</b></a></p>
 <p style="position:absolute;top:968px;left:64px;white-space:nowrap" class="ft013">Jinming&#160;Lu,</p>
-<p style="position:absolute;top:967px;left:138px;white-space:nowrap" class="ft012"><b>Jiayi&#160;Tian</b></p>
-<p style="position:absolute;top:968px;left:201px;white-space:nowrap" class="ft013">,&#160;Hai&#160;Li,&#160;Ian&#160;Young,&#160;Zheng&#160;Zhang,&#160;under&#160;review&#160;at&#160;IEEE&#160;Transactions&#160;on&#160;Computer-Aided&#160;Design&#160;of&#160;Integrated</p>
-<p style="position:absolute;top:986px;left:64px;white-space:nowrap" class="ft013">Circuits&#160;and&#160;Systems.&#160;<a href="https://arxiv.org/pdf/2504.06474">arXiv&#160;preprint</a>.</p>
+<p style="position:absolute;top:967px;left:141px;white-space:nowrap" class="ft012"><b>Jiayi&#160;Tian</b></p>
+<p style="position:absolute;top:968px;left:205px;white-space:nowrap" class="ft013">,&#160;Hai&#160;Li,&#160;Ian&#160;Young,&#160;Zheng&#160;Zhang,&#160;accepted&#160;to&#160;IEEE&#160;Transactions&#160;on&#160;Computer-Aided&#160;Design&#160;of&#160;Integrated</p>
+<p style="position:absolute;top:986px;left:64px;white-space:nowrap" class="ft013">Circuits&#160;and&#160;Systems&#160;(TCAD),&#160;2025.</p>
 <p style="position:absolute;top:1012px;left:64px;white-space:nowrap" class="ft017"><b>Ultra&#160;Memory-Eﬀicient&#160;On-FPGA&#160;Training&#160;of&#160;Transformers&#160;via&#160;Tensor-Compressed&#160;Optimization<br/>Jiayi&#160;Tian</b></p>
 <p style="position:absolute;top:1030px;left:126px;white-space:nowrap" class="ft013">,&#160;Jinming&#160;Lu,&#160;Hai&#160;Li,&#160;Xiangwei&#160;Wang,&#160;Cong&#160;(Callie)&#160;Hao,&#160;Ian&#160;Young,&#160;Zheng&#160;Zhang,&#160;<a href="https://ieeexplore.ieee.org/document/11121368">IEEE&#160;Transactions&#160;on&#160;Computer-Aided</a></p>
 <p style="position:absolute;top:1048px;left:64px;white-space:nowrap" class="ft013"><a href="https://ieeexplore.ieee.org/document/11121368">Design&#160;of&#160;Integrated&#160;Circuits&#160;and&#160;Systems&#160;(TCAD),&#160;2025.</a></p>
