--- a/output-2.html
+++ b/output-2.html
@@ -6,12 +6,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <style type="text/css">
 <!--
-	p {margin: 0; padding: 0;}	.ft00{font-size:16px;font-family:AYLVYJ+TeXGyreTermesX;color:#4471c4;}
-	.ft01{font-size:16px;font-family:AYLVYJ+TeXGyreTermesX;color:#000000;}
-	.ft02{font-size:14px;font-family:WGOXIQ+LMRoman10;color:#000000;}
-	.ft03{font-size:16px;font-family:WGOXIQ+LMRoman10;color:#000000;}
-	.ft04{font-size:16px;font-family:UBPTZO+LatinModernMath;color:#000000;}
-	.ft05{font-size:16px;line-height:16px;font-family:WGOXIQ+LMRoman10;color:#000000;}
+	p {margin: 0; padding: 0;}	.ft00{font-size:16px;font-family:EWNCDH+TeXGyreTermesX;color:#4471c4;}
+	.ft01{font-size:16px;font-family:EWNCDH+TeXGyreTermesX;color:#000000;}
+	.ft02{font-size:14px;font-family:AUMUVI+LMRoman10;color:#000000;}
+	.ft03{font-size:16px;font-family:AUMUVI+LMRoman10;color:#000000;}
+	.ft04{font-size:16px;font-family:CTZBEI+LatinModernMath;color:#000000;}
+	.ft05{font-size:16px;line-height:16px;font-family:AUMUVI+LMRoman10;color:#000000;}
 -->
 </style>
 </head>
